# stock-dashboard

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md
.claude/: settings.local.json
.github/workflows/: cache-update.yml
backend/: auth.py  config.py  db.py  main.py  pyproject.toml  render.yaml  requirements.txt  scheduler.py
backend/models/: market.py  portfolio.py  sentiment.py
backend/providers/: data_provider.py  llm_provider.py  news_provider.py
backend/routers/: market.py  portfolio.py  sentiment.py
backend/services/: market_service.py  portfolio_service.py  sentiment_service.py
docs/: PRD.md  TRD.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
streamlit_app/: .gitignore  README.md  app.py  database.py  migrate_to_turso.py  requirements.txt
streamlit_app/.streamlit/: config.toml  secrets.toml.example
streamlit_app/app_pages/: 0_Home.py  10_Watchlist.py  11_Macro.py  1_Dashboard.py  2_AI_Quant_Lab.py  3_Heatmap.py  4_Stock_Detail.py  5_Portfolio.py  6_Sentiment.py  7_Calendar.py  8_Screener.py  9_Compare.py  _quant_lab_i18n.py
streamlit_app/components/: ui.py
streamlit_app/core/: data_provider.py  llm_provider.py  news_provider.py
streamlit_app/pages/: 10_Watchlist.py  1_AI_Quant_Lab.py  1_Dashboard.py  2_AI_Quant_Lab.py  2_Heatmap.py  3_Heatmap.py  3_Stock_Detail.py  4_Portfolio.py  4_Stock_Detail.py  5_Portfolio.py  5_Sentiment.py  6_Sentiment.py  7_Calendar.py  7_Screener.py  8_Screener.py  9_Compare.py
streamlit_app/scripts/: fetch_cache.py  update_fundamentals.bat  (+3 more)
(+51 files in other folders)
